fixes and changes

--- a/exampleSite/config/_default/menu.en.toml
+++ b/exampleSite/config/_default/menu.en.toml
@@ -12,8 +12,7 @@ weight = 2
 
 [[main]]
 name = "Podcast"
-url = "coaching"
-weight = 3
+url = "https://infinitude.buzzsprout.com"
 
 [[main]]
 name = "Videos"
